UMO/web/upload/outputCode/compile_error_message.txt
C:\Users\user2\git\Semi-Project\UMO\web\upload\inputCode\Test.java:5: error: class, interface, or enum expected
}rgdfgikf;gdf;g;dl'g'd;gldf'g
 ^
C:\Users\user2\git\Semi-Project\UMO\web\upload\inputCode\Test.java:5: error: class, interface, or enum expected
}rgdfgikf;gdf;g;dl'g'd;gldf'g
          ^
C:\Users\user2\git\Semi-Project\UMO\web\upload\inputCode\Test.java:5: error: class, interface, or enum expected
}rgdfgikf;gdf;g;dl'g'd;gldf'g
              ^
C:\Users\user2\git\Semi-Project\UMO\web\upload\inputCode\Test.java:5: error: class, interface, or enum expected
}rgdfgikf;gdf;g;dl'g'd;gldf'g
                ^
C:\Users\user2\git\Semi-Project\UMO\web\upload\inputCode\Test.java:5: error: unclosed character literal
}rgdfgikf;gdf;g;dl'g'd;gldf'g
                           ^
5 errors
